--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ APP_CORS="https://localhost:5173"
 APP_SECRET="QUk76g1GxBPgzoR9Gt7sk8XH3UCiEkPwibY1Dx8Aw8w"
 
 # DATABASE CONNECTION
-DB_USERNAME="ucddotqt735zuvgg"
-DB_PASSWORD="tMAkpaHwn5cqntljUbbZ"
-DB_HOST="bxl72vorzq5atuc3sdvq-mysql.services.clever-cloud.com"
+DB_USERNAME="root"
+DB_PASSWORD="oiTeAyBKcoyZXswxavoAwUEPOMlyODFc"
+DB_HOST="mysql-gudz.railway.internal"
 DB_PORT=3306
-DB_DATABASE_NAME="bxl72vorzq5atuc3sdvq"
-DB_URI = "mysql://ucddotqt735zuvgg:tMAkpaHwn5cqntljUbbZ@bxl72vorzq5atuc3sdvq-mysql.services.clever-cloud.com:3306/bxl72vorzq5atuc3sdvq"
+DB_DATABASE_NAME="railway"
+DB_URI = "mysql://root:oiTeAyBKcoyZXswxavoAwUEPOMlyODFc@mysql-gudz.railway.internal:3306/railway"
 DB_MONGO_USER = "briancastro"
 DB_MONGO_PASSWORD = "7SnJuEK6GN7QSyL7"
 DB_MONGO_URI = "mongodb+srv://briancastro:7SnJuEK6GN7QSyL7@enyoipractice.unhvhtm.mongodb.net/?retryWrites=true&w=majority&appName=enyoiPractice"
