--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ APP_SECRET="QUk76g1GxBPgzoR9Gt7sk8XH3UCiEkPwibY1Dx8Aw8w"
 
 # DATABASE CONNECTION
 DB_USERNAME="root"
-DB_PASSWORD="oiTeAyBKcoyZXswxavoAwUEPOMlyODFc"
-DB_HOST="mysql-gudz.railway.internal"
-DB_PORT=3306
-DB_DATABASE_NAME="railway"
-DB_URI = "mysql://root:oiTeAyBKcoyZXswxavoAwUEPOMlyODFc@mysql-gudz.railway.internal:3306/railway"
+DB_PASSWORD="123456"
+DB_HOST="localhost"
+DB_PORT=3307
+DB_DATABASE_NAME="tu-hotel"
+DB_URI = "mysql://root:123456@localhost:3307/tu-hotel"
 DB_MONGO_USER = "briancastro"
 DB_MONGO_PASSWORD = "7SnJuEK6GN7QSyL7"
 DB_MONGO_URI = "mongodb+srv://briancastro:7SnJuEK6GN7QSyL7@enyoipractice.unhvhtm.mongodb.net/?retryWrites=true&w=majority&appName=enyoiPractice"
